[package]
name = "arbit"
version = "0.1.0"
authors = ["Zeb Barnett <me@zebbarnett.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
petgraph = "0.8.3"
ahash = "0.8.12"
tungstenite = { version = "0.28", features = ["native-tls"] }
url = "2.5.7"

[profile.release]
opt-level = 3