[package]
name = "antares"
version = "0.1.0"
authors = ["Zeb Barnett <me@zebbarnett.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
petgraph = "0.8.3"
tungstenite = { version = "0.28", features = ["native-tls"] }
url = "2.5.7"
chrono = "0.4"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
pem = "3"
rand = "0.8"
ordered-float = "4.2"
p256 = { version = "0.13", features = ["pem", "pkcs8"] }

[profile.release]
opt-level = 3